Update Color - CTA

--- a/amp/index.html
+++ b/amp/index.html
@@ -310,7 +310,7 @@ hr.divider{max-width:3.25rem;border-width:0.2rem;border-color:#f4623a;}
 header.masthead{padding-top:10rem;padding-bottom:0;background:url("../assets/bg-pattern.jpg") repeat;background-position:center;background-attachment:scroll;background-size:auto;}
 header.masthead h1{font-size:2.25rem;font-family:'Nunito', sans-serif;font-weight:800;}
 .btn-common{background:#04BF74;border-radius:0;color:#fff;padding:14px 0;}
-.btn-request{background:#006266;}
+.btn-request{background:#FFA000;}
 .fee-btn{background-image:linear-gradient(227deg, #FFE329 0%, #FFD21D 17%, #FFC312 94%);box-shadow:0 2px 7px 2px rgba(255,195,18,0.62);color:#000;font-weight:700;font-size:16px;}
 #admission h2{font-size:3em;font-weight:800;margin-bottom:20px;color:#4B0089;}
 #features p.card-title{color:#490386;font-size:1.5em;font-weight:800;}
