navbar Dropdown- Fixed

--- a/facilities.html
+++ b/facilities.html
@@ -23,17 +23,52 @@
   </head>
 <body id="page-top">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3 bg-white shadow" id="mainNav">
-            <div class="container justify-content-center">
-                <a class="navbar-brand " href="#page-top"><img src="assets/pragyanam-logo.png" alt="Pragyanam Logo" width="200px"></a>
-            </div>
+          <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top py-3 bg-white shadow" id="mainNav">
+          <div class="container">
+          <a class="navbar-brand " href="index.html"><img src="assets/pragyanam-logo.png" alt="Pragyanam Logo" width="200px"></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">About Us</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Curriculum</a>
+                <div class="dropdown-menu" aria-labelledby="dropdown03">
+                  <a class="dropdown-item" href="curriculum.html">Our Curriculum</a>
+                  <a class="dropdown-item" href="affiliation.html">CBSE</a>
+                  <a class="dropdown-item" href="assessment.html">Assessment</a>
+                </div>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Facilities</a>
+                <div class="dropdown-menu" aria-labelledby="dropdown03">
+                  <a class="dropdown-item" href="facilities.html">Facilities</a>
+                  <a class="dropdown-item" href="nutrition.html">Nutrition</a>
+                  <a class="dropdown-item" href="Infirmary.html">Infirmary</a>
+                </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="admission.html">Admission</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="careers.html">Careers</a>
+              </li>
+            </ul>
+          </div>
+        </div>
         </nav>
         <!-- Masthead-->
         <header class="masthead all-cover">
             <div class="container h-100">
                 <div class="row h-100 align-items-center justify-content-center">
                     <div class="col-lg-12 align-self-center">
-                        <p class="h3 text-center font-weight-bold text-white">Facilities</p>
+                        <p class="h3 text-center font-weight-bold text-white"> &nbsp;</p>
                     </div>
                 </div>
             </div>
