--- a/thanks.html
+++ b/thanks.html
@@ -23,17 +23,52 @@
   </head>
 <body id="page-top">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3 bg-white shadow" id="mainNav">
-            <div class="container justify-content-center">
-                <a class="navbar-brand " href="#page-top"><img src="assets/pragyanam-logo.png" alt="Pragyanam Logo" width="200px"></a>
-            </div>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top py-3 bg-white shadow" id="mainNav">
+          <div class="container">
+          <a class="navbar-brand " href="index.html"><img src="assets/pragyanam-logo.png" alt="Pragyanam Logo" width="200px"></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">About Us</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Curriculum</a>
+                <div class="dropdown-menu" aria-labelledby="dropdown03">
+                  <a class="dropdown-item" href="curriculum.html">Our Curriculum</a>
+                  <a class="dropdown-item" href="affiliation.html">CBSE</a>
+                  <a class="dropdown-item" href="assessment.html">Assessment</a>
+                </div>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Facilities</a>
+                <div class="dropdown-menu" aria-labelledby="dropdown03">
+                  <a class="dropdown-item" href="facilities.html">Facilities</a>
+                  <a class="dropdown-item" href="nutrition.html">Nutrition</a>
+                  <a class="dropdown-item" href="Infirmary.html">Infirmary</a>
+                </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="admission.html">Admission</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="careers.html">Careers</a>
+              </li>
+            </ul>
+          </div>
+        </div>
         </nav>
         <!-- Masthead-->
         <header class="masthead all-cover">
             <div class="container h-100">
                 <div class="row h-100 align-items-center justify-content-center">
                     <div class="col-lg-12 align-self-center">
-                        <p class="h3 text-center font-weight-bold text-white">Thanks For Apply</p>
+                        <p class="h3 text-center font-weight-bold text-white">&nbsp;</p>
                     </div>
                 </div>
             </div>
@@ -41,7 +76,7 @@
 <!-- Thanks For Apply  -->
         <section class="pt-4 pb-lg-4 thanks">
             <div class="container">
-                <h1 class="text-center font-weight-bold">Thanks For Apply</h1>
+                <h1 class="text-center font-weight-bold text-blue">Thanks For Apply</h1>
             </div>
         </section>
 
@@ -50,7 +85,7 @@
           <div class="container h-100">
                   <div class="row h-100 align-items-center justify-content-center">
                       <div class="col-lg-5 align-self-start">
-                          <h3 class="subtitle-text mt-0 h5">Fee Structure</h3>
+                          <h3 class="subtitle-text mt-0 h5 text-blue font-weight-bold">Fee Structure</h3>
                           <!-- <hr class="divider my-2" /> -->
                           <ul class="list-group list-group-flush">
                             <li class="list-group-item border-bottom-0 pl-0"><img src="assets/check-circle-solid.svg" alt="points" width="20" height="20"> Admission Fees – INR 40,000/- </li>
@@ -61,7 +96,7 @@
                           <p class="mt-4 font-weight-bold ">All charges are published in the fee structure, we do not charge anything extra during the year.</p>
                       </div>
                       <div class="col-lg-7 align-self-start">
-                        <h3 class="subtitle-text mt-0 h5">DISCOUNTS:</h3>
+                        <h3 class="subtitle-text mt-0 h5 text-blue font-weight-bold">DISCOUNTS:</h3>
                         <ul class="list-group list-group-flush">
                           <li class="list-group-item border-bottom-0 pl-0"><img src="assets/check-circle-solid.svg" alt="points" width="20" height="20"> Sibling discount – 10% – all components except transport and food.</li>
                           <li class="list-group-item border-bottom-0 pl-0"><img src="assets/check-circle-solid.svg" alt="points" width="20" height="20"> Single Parent Discount – 10 % all components except transport and food. </li>
