--- a/affiliation.html
+++ b/affiliation.html
@@ -88,9 +88,9 @@
                         </div>
                         <div class="col-lg-5 align-self-center">
                           <div class="card border-0 shadow head-video rounded-cm mb-4">
-                              <div class="card-body">
-                                  <img src="assets/school-head.jpg" alt="school-head" class="img-fluid w-100">
-                                  <p class="text-center font-weight-bold m-0 mt-3 h3">CBSE</p>
+                              <div class="card-body text-center">
+                                  <img src="assets/CBSE_Logo.png" alt="school-head" class="img-fluid">
+                                  <p class="text-center font-weight-bold m-0 mt-3 h3 text-blue">CBSE</p>
                               </div>
                           </div>
                         </div>
