--- a/nutrition.html
+++ b/nutrition.html
@@ -97,7 +97,7 @@
                       <div class="col-lg-5 align-self-center">
                         <div class="card border-0 shadow head-video rounded-cm mb-4">
                             <div class="card-body">
-                                <img src="assets/school-head.jpg" alt="school-head" class="img-fluid w-100">
+                                <img src="assets/Nutrition.jpg" alt="Nutrition" class="img-fluid w-100">
                             </div>
                         </div>
                       </div>
