--- a/Infirmary.html
+++ b/Infirmary.html
@@ -89,8 +89,7 @@
                         <div class="col-lg-5 align-self-center">
                           <div class="card border-0 shadow head-video rounded-cm mb-4">
                               <div class="card-body">
-                                  <img src="assets/school-head.jpg" alt="school-head" class="img-fluid w-100">
-                                  <p class="text-center font-weight-bold m-0 mt-3 h3">No Limits</p>
+                                  <img src="assets/Medical.jpg" alt="Medical" class="img-fluid w-100">
                               </div>
                           </div>
                         </div>
