--- a/about.html
+++ b/about.html
@@ -73,6 +73,7 @@
                 </div>
             </div>
         </header>
+
         <header class="py-4 about">
             <div class="container h-100">
                 <h1 class="title-text text-center mt-0">About Us</h1>
@@ -104,7 +105,7 @@
                           <div class="card border-0 shadow head-video rounded-cm mb-4">
                               <div class="card-body">
                                   <img src="assets/school-head.jpg" alt="school-head" class="img-fluid w-100">
-                                  <p class="text-center font-weight-bold my-2 h4">Ms. GEETA VERMA</p>
+                                  <p class="text-center font-weight-bold my-2 h4 text-blue">Ms. GEETA VERMA</p>
                               </div>
                           </div>
                         </div>
@@ -125,7 +126,7 @@
                         <div class="img-circle shadow m-auto">
                             <img src="assets/Raj-Singhal.jpg" alt="Raj Singhal" class="img-fluid img-circle p-2 bg-white">
                         </div>
-                        <p class="card-title h5 mt-3 font-weight-bold">Raj Singhal</p>
+                        <p class="card-title h5 mt-3 font-weight-bold text-blue">Raj Singhal</p>
                         <p class="text-justify">A father of twins and a seasoned entrepreneur Raj, is an alumnus of IIT Delhi. Amongst many of his laurels is his taking a software services firm to a 10 million turn over with 350 employees and 3 countries in 10 Years. He is passionate about transforming Indian Education Sector. As a Co-Founder and CEO of Footprints Childcare, he yearns towards creating world-class education facilities in India.</p>
                       </div>
                     </div>
@@ -136,7 +137,7 @@
                         <div class="img-circle shadow m-auto">
                             <img src="assets/Ashish-Aggarwal.jpg" alt="Ashish Aggarwal" class="img-fluid img-circle p-2 bg-white">
                         </div>
-                        <p class="card-title h5 mt-3 font-weight-bold">Ashish Aggarwal</p>
+                        <p class="card-title h5 mt-3 font-weight-bold text-blue">Ashish Aggarwal</p>
                         <p class="text-justify">Ashish is an alumnus of IIT Delhi and IIM Calcutta and the father of an 11-year old. He firmly believes that Indian Education System is long due for transformation and our schools need to play a significant role in creating mature and wise individuals who can happily take on any challenges life throws at them.</p>
                       </div>
                     </div>
@@ -147,7 +148,7 @@
                         <div class="img-circle shadow m-auto">
                             <img src="assets/Purvesh-Sharma.jpg" alt="Purvesh Sharma" class="img-fluid img-circle p-2 bg-white">
                         </div>
-                        <p class="card-title h5 mt-3 font-weight-bold">Purvesh Sharma</p>
+                        <p class="card-title h5 mt-3 font-weight-bold text-blue">Purvesh Sharma</p>
                         <p class="text-justify">An IIT Delhi alumnus, Purvesh entered the field of education when he co-founded an e-Learning company in 2000. Purvesh is also a trained life coach and he focusses on helping people lead meaningful and fulfilling lives. His vision includes revolutionising education, by creating life ready children, who grow to be happy and satisfied adults.</p>
                       </div>
                     </div>
@@ -172,7 +173,7 @@
                         </div>
                      </div>
                       <div class="col-7 ml-3 my-auto">
-                        <p class="card-title h5 mb-2 font-weight-bold">Monika Sachdev</p>
+                        <p class="card-title h5 mb-2 font-weight-bold text-blue">Monika Sachdev</p>
                         <p class="designation">Curriculum Coordinator</p>
                         <p class="info m-0">With nearly two decades of experience in the field of education as a Primary School Coordinator, understanding the point of view of children is easy for Monika. Read More</p>
                       </div>
@@ -190,7 +191,7 @@
                         </div>
                      </div>
                      <div class="col-7 ml-3 my-auto">
-                      <p class="card-title h5 mb-2 font-weight-bold">Divisha Panchal</p>
+                      <p class="card-title h5 mb-2 font-weight-bold text-blue">Divisha Panchal</p>
                       <p class="designation">Curriculum Coordinator</p>
                       <p class="info m-0">With nearly two decades of experience in the field of education as a Primary School Coordinator, understanding the point of view of children is easy for Monika. Read More</p>
                     </div>
@@ -208,7 +209,7 @@
                         </div>
                      </div>
                      <div class="col-7 ml-3 my-auto">
-                        <p class="card-title h5 mb-2 font-weight-bold">Monika Sachdev</p>
+                        <p class="card-title h5 mb-2 font-weight-bold text-blue">Monika Sachdev</p>
                         <p class="designation">Curriculum Coordinator</p>
                         <p class="info m-0">With nearly two decades of experience in the field of education as a Primary School Coordinator, understanding the point of view of children is easy for Monika. Read More</p>
                       </div>
@@ -226,7 +227,7 @@
                         </div>
                      </div>
                      <div class="col-7 ml-3 my-auto">
-                        <p class="card-title h5 mb-2 font-weight-bold">Divisha Panchal</p>
+                        <p class="card-title h5 mb-2 font-weight-bold text-blue">Divisha Panchal</p>
                         <p class="designation">Curriculum Coordinator</p>
                         <p class="info m-0">With nearly two decades of experience in the field of education as a Primary School Coordinator, understanding the point of view of children is easy for Monika. Read More</p>
                       </div>
