--- a/assessment.html
+++ b/assessment.html
@@ -91,8 +91,8 @@
                         <div class="col-lg-5 align-self-center">
                           <div class="card border-0 shadow head-video rounded-cm mb-4">
                               <div class="card-body">
-                                  <img src="assets/school-head.jpg" alt="school-head" class="img-fluid w-100">
-                                  <p class="text-center font-weight-bold m-0 mt-3 h3">No Limits</p>
+                                  <img src="assets/Assesment.jpg" alt="Assesment" class="img-fluid" height="200">
+                                  <p class="text-center font-weight-bold m-0 mt-3 h3 text-blue">No Limits</p>
                               </div>
                           </div>
                         </div>
