--- a/curriculum.html
+++ b/curriculum.html
@@ -77,7 +77,7 @@
         <section class="py-5 objective">
            <div class="container">
              <div class="objective-info text-center">
-              <h1 class="mb-4 h4">The Objective of the curriculum delivery is to nurture and inculcate the following in very child.</h1>
+              <h1 class="mb-4 h4 text-blue font-weight-bold">The Objective of the curriculum delivery is to nurture and inculcate the following in very child.</h1>
               <p class="mb-3">It is based on the fundamental belief that “Children are born with unlimited potential and we as parents and teachers need to create an environment to nurture their nolimtness” And need to equip them with the 21st century skills.</p>
               <p class="mb-3">The Objective of the curriculum delivery is to nurture and inculcate the following in very child.</p>
 
@@ -88,7 +88,7 @@
                       <div class="icon">
                           <img src="assets/icons/self-awareness-01.svg" alt="self-awareness" width="80">
                       </div>
-                      <p class="card-title h5 mt-3 font-weight-bold">Self Awareness</p>
+                      <p class="card-title h5 mt-3 font-weight-bold text-blue">Self Awareness</p>
                     </div>
                   </div>
                 </div>
@@ -98,7 +98,7 @@
                       <div class="icon">
                           <img src="assets/icons/empathy-01.svg" alt="Empathy" width="80">
                       </div>
-                      <p class="card-title h5 mt-3 font-weight-bold">Empathy</p>
+                      <p class="card-title h5 mt-3 font-weight-bold text-blue">Empathy</p>
                     </div>
                   </div>
                 </div>
@@ -108,7 +108,7 @@
                       <div class="icon">
                           <img src="assets/icons/critical-thinking-01.svg" alt="Critical Thinking" width="80">
                       </div>
-                      <p class="card-title h5 mt-3 font-weight-bold">Critical Thinking</p>
+                      <p class="card-title h5 mt-3 font-weight-bold text-blue">Critical Thinking</p>
                     </div>
                   </div>
                 </div>
@@ -118,7 +118,7 @@
                       <div class="icon">
                           <img src="assets/icons/creative-thinking-01.svg" alt="self-awareness" width="80">
                       </div>
-                      <p class="card-title h5 mt-3 font-weight-bold">Creative Thinking</p>
+                      <p class="card-title h5 mt-3 font-weight-bold text-blue">Creative Thinking</p>
                     </div>
                   </div>
                 </div>
@@ -128,7 +128,7 @@
                       <div class="icon">
                           <img src="assets/icons/ecision-making-01.svg" alt="Decision Making" width="80">
                       </div>
-                      <p class="card-title h5 mt-3 font-weight-bold">Decision Making</p>
+                      <p class="card-title h5 mt-3 font-weight-bold text-blue">Decision Making</p>
                     </div>
                   </div>
                 </div>
@@ -138,7 +138,7 @@
                       <div class="icon">
                           <img src="assets/icons/problem-solving-01.svg" alt="Problem Solving" width="80">
                       </div>
-                      <p class="card-title h5 mt-3 font-weight-bold">Problem Solving</p>
+                      <p class="card-title h5 mt-3 font-weight-bold text-blue">Problem Solving</p>
                     </div>
                   </div>
                 </div>
@@ -148,7 +148,7 @@
                       <div class="icon">
                           <img src="assets/icons/communication-01.svg" alt="Effective Communication" width="80">
                       </div>
-                      <p class="card-title h5 mt-3 font-weight-bold">Effective Communication</p>
+                      <p class="card-title h5 mt-3 font-weight-bold text-blue">Effective Communication</p>
                     </div>
                   </div>
                 </div>
@@ -158,7 +158,7 @@
                       <div class="icon">
                           <img src="assets/icons/relationship-01.svg" alt="Interpersonal Relationship" width="80">
                       </div>
-                      <p class="card-title h5 mt-3 font-weight-bold">Interpersonal Relationship</p>
+                      <p class="card-title h5 mt-3 font-weight-bold text-blue">Interpersonal Relationship</p>
                     </div>
                   </div>
                 </div>
@@ -168,7 +168,7 @@
                       <div class="icon">
                           <img src="assets/icons/coping-01.svg" alt="Coping with Stress" width="80">
                       </div>
-                      <p class="card-title h5 mt-3 font-weight-bold">Coping with Stress</p>
+                      <p class="card-title h5 mt-3 font-weight-bold text-blue">Coping with Stress</p>
                     </div>
                   </div>
                 </div>
@@ -178,7 +178,7 @@
                       <div class="icon">
                           <img src="assets/icons/emotion-01.svg" alt="Coping with Emotion" width="80">
                       </div>
-                      <p class="card-title h5 mt-3 font-weight-bold">Coping with Emotion</p>
+                      <p class="card-title h5 mt-3 font-weight-bold text-blue">Coping with Emotion</p>
                     </div>
                   </div>
                 </div>
@@ -194,7 +194,7 @@
         <!-- No Limit Curriculum -->
         <section class="pt-5 pb-0 py-lg-5 school-head bg-blue">
             <div class="container h-100">
-                    <h2 class="title-text text-center mt-0 h4">WHAT IS OUR <br> <span> NO- LIMIT CURRICULUM?</span></h2>
+                    <h2 class="title-text text-center mt-0 h4">WHAT IS OUR <br> <span class="text-blue"> NO- LIMIT CURRICULUM?</span></h2>
                     <hr class="divider my-4" />
                     <div class="row h-100 align-items-center justify-content-center">
                         <div class="col-lg-7 align-self-center">
@@ -215,11 +215,11 @@
         <!-- HOW IT WILL BE -->
         <section class="pt-5 pb-0 py-lg-5 school-head">
           <div class="container h-100">
-                  <h2 class="title-text text-center mt-0 h4">HOW IT WILL BE <br> <span> DELIVERED</span></h2>
+                  <h2 class="title-text text-center mt-0 h4">HOW IT WILL BE <br> <span class="text-blue"> DELIVERED</span></h2>
                   <hr class="divider my-4" />
                   <div class="row h-100 align-items-center justify-content-center">
                       <div class="col-lg-7 align-self-center order-2 order-lg-1">
-                          <h3 class="text-center h4">A healthy mix of new and traditional methods would be used for effective delivery of No-Limit Curriculum</h3>
+                          <h3 class="text-center h4 text-blue font-weight-bold">A healthy mix of new and traditional methods would be used for effective delivery of No-Limit Curriculum</h3>
                           <ul class="list-group list-group-flush">
                             <li class="list-group-item border-bottom-0"><img src="assets/check-circle-solid.svg" alt="points" width="20" height="20"> <span class="font-weight-bold">Courseware–</span> using a rich mix of <span class="font-weight-bold"> NCERT</span> and other guiding texts</li>
                           <li class="list-group-item border-bottom-0"><img src="assets/check-circle-solid.svg" alt="points" width="20" height="20"> A mix of structured and unstructured co-scholastic activities like <span class="font-weight-bold">dance/ drama/ theatre/ storytelling/ P.E</span>
