--- a/facilities.html
+++ b/facilities.html
@@ -153,7 +153,7 @@
           <div class="card h-100 border-0 bg-transparent">
             <div class="card-body px-0">
               <div class="icon">
-                  <img src="assets/icons/sports-01.svg" alt="Music" width="80">
+                  <img src="assets/icons/music-01.svg" alt="Music" width="80">
               </div>
               <p class="card-title h5 mt-3 font-weight-bold">Music</p>
             </div>
@@ -163,7 +163,7 @@
           <div class="card h-100 border-0 bg-transparent">
             <div class="card-body px-0">
               <div class="icon">
-                  <img src="assets/icons/tennis-01.svg" alt="Art & Craft" width="80">
+                  <img src="assets/icons/art-01.svg" alt="Art & Craft" width="80">
               </div>
               <p class="card-title h5 mt-3 font-weight-bold">Art & Craft</p>
             </div>
@@ -173,7 +173,7 @@
           <div class="card h-100 border-0 bg-transparent">
             <div class="card-body px-0">
               <div class="icon">
-                  <img src="assets/icons/badminton-01.svg" alt="Pottery & Sculpture" width="80">
+                  <img src="assets/icons/pottery-01.svg" alt="Pottery & Sculpture" width="80">
               </div>
               <p class="card-title h5 mt-3 font-weight-bold">Pottery & Sculpture</p>
             </div>
@@ -183,7 +183,7 @@
           <div class="card h-100 border-0 bg-transparent">
             <div class="card-body px-0">
               <div class="icon">
-                  <img src="assets/icons/swimming-01.svg" alt="Dramatics" width="80">
+                  <img src="assets/icons/drama-01.svg" alt="Dramatics" width="80">
               </div>
               <p class="card-title h5 mt-3 font-weight-bold">Dramatics</p>
             </div>
@@ -193,7 +193,7 @@
           <div class="card h-100 border-0 bg-transparent">
             <div class="card-body px-0">
               <div class="icon">
-                  <img src="assets/icons/athletics-01.svg" alt="Yoga" width="80">
+                  <img src="assets/icons/yoga-01.svg" alt="Yoga" width="80">
               </div>
               <p class="card-title h5 mt-3 font-weight-bold">Yoga</p>
             </div>
@@ -203,7 +203,7 @@
           <div class="card h-100 border-0 bg-transparent">
             <div class="card-body px-0">
               <div class="icon">
-                  <img src="assets/icons/gymnast-01.svg" alt="Dance" width="80">
+                  <img src="assets/icons/dance-01.svg" alt="Dance" width="80">
               </div>
               <p class="card-title h5 mt-3 font-weight-bold">Dance</p>
             </div>
@@ -221,7 +221,7 @@
        <div class="col-lg-8">
          <div class="card border-0 shadow mt-4">
            <div class="card-body">
-
+              <img src="assets/swimming.jpg" alt="swimming" class="img-fluid w-100">
            </div>
          </div>
        </div>
@@ -237,7 +237,7 @@
         <div class="col-lg-8">
           <div class="card border-0 shadow mt-4">
             <div class="card-body">
- 
+              <iframe width="100%" height="350" src="https://www.youtube.com/embed/4N8fsrSkp8w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
             </div>
           </div>
         </div>
