About AMP - Fixed

--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
             </div>
         </header>
 
-        <header class="py-4 about">
+        <section class="py-4 about">
             <div class="container h-100">
                 <h1 class="title-text text-center mt-0">About Us</h1>
                 <hr class="divider my-4" />
@@ -91,7 +91,7 @@
                     </div>
                 </div>
             </div>
-        </header>
+        </section>
         <!-- School Head -->
         <section class="pt-5 pb-0 py-lg-5 school-head bg-blue">
             <div class="container h-100">
