Update AMP Curriculum

--- a/amp/curriculum.html
+++ b/amp/curriculum.html
@@ -607,7 +607,7 @@ header.masthead h1{font-size:2.4rem;}
                     <div class="icon">
                         <amp-img src="../assets/icons/self-awareness-01.svg" alt="self-awareness" layout="fixed" width="80" height="80"></amp-img> 
                     </div>
-                    <p class="card-title h5 mt-3 font-weight-bold">Self Awareness</p>
+                    <p class="card-title h5 mt-3 font-weight-bold text-blue">Self Awareness</p>
                   </div>
                 </div>
               </div>
@@ -617,7 +617,7 @@ header.masthead h1{font-size:2.4rem;}
                     <div class="icon">
                         <amp-img src="../assets/icons/empathy-01.svg" alt="Empathy" layout="fixed" width="80" height="80"></amp-img>
                     </div>
-                    <p class="card-title h5 mt-3 font-weight-bold">Empathy</p>
+                    <p class="card-title h5 mt-3 font-weight-bold text-blue">Empathy</p>
                   </div>
                 </div>
               </div>
@@ -627,7 +627,7 @@ header.masthead h1{font-size:2.4rem;}
                     <div class="icon">
                         <amp-img src="../assets/icons/critical-thinking-01.svg" alt="Critical Thinking" layout="fixed" width="80" height="80"></amp-img>
                     </div>
-                    <p class="card-title h5 mt-3 font-weight-bold">Critical Thinking</p>
+                    <p class="card-title h5 mt-3 font-weight-bold text-blue">Critical Thinking</p>
                   </div>
                 </div>
               </div>
@@ -637,7 +637,7 @@ header.masthead h1{font-size:2.4rem;}
                     <div class="icon">
                         <amp-img src="../assets/icons/creative-thinking-01.svg" alt="self-awareness" layout="fixed" width="80" height="80"></amp-img>
                     </div>
-                    <p class="card-title h5 mt-3 font-weight-bold">Creative Thinking</p>
+                    <p class="card-title h5 mt-3 font-weight-bold text-blue">Creative Thinking</p>
                   </div>
                 </div>
               </div>
@@ -647,7 +647,7 @@ header.masthead h1{font-size:2.4rem;}
                     <div class="icon">
                         <amp-img src="../assets/icons/ecision-making-01.svg" alt="Decision Making" layout="fixed" width="80" height="80"></amp-img>
                     </div>
-                    <p class="card-title h5 mt-3 font-weight-bold">Decision Making</p>
+                    <p class="card-title h5 mt-3 font-weight-bold text-blue">Decision Making</p>
                   </div>
                 </div>
               </div>
@@ -657,7 +657,7 @@ header.masthead h1{font-size:2.4rem;}
                     <div class="icon">
                         <amp-img src="../assets/icons/problem-solving-01.svg" alt="Problem Solving" layout="fixed" width="80" height="80"></amp-img>
                     </div>
-                    <p class="card-title h5 mt-3 font-weight-bold">Problem Solving</p>
+                    <p class="card-title h5 mt-3 font-weight-bold text-blue">Problem Solving</p>
                   </div>
                 </div>
               </div>
@@ -667,7 +667,7 @@ header.masthead h1{font-size:2.4rem;}
                     <div class="icon">
                         <amp-img src="../assets/icons/communication-01.svg" alt="Effective Communication" layout="fixed" width="80" height="80"></amp-img>
                     </div>
-                    <p class="card-title h5 mt-3 font-weight-bold">Effective Communication</p>
+                    <p class="card-title h5 mt-3 font-weight-bold text-blue">Effective Communication</p>
                   </div>
                 </div>
               </div>
@@ -677,7 +677,7 @@ header.masthead h1{font-size:2.4rem;}
                     <div class="icon">
                         <amp-img src="../assets/icons/relationship-01.svg" alt="Interpersonal Relationship" layout="fixed" width="80" height="80"></amp-img>
                     </div>
-                    <p class="card-title h5 mt-3 font-weight-bold">Interpersonal Relationship</p>
+                    <p class="card-title h5 mt-3 font-weight-bold text-blue">Interpersonal Relationship</p>
                   </div>
                 </div>
               </div>
