--- a/amp/facilities.html
+++ b/amp/facilities.html
@@ -595,7 +595,7 @@ header.masthead h1{font-size:2.4rem;}
           <div class="card h-100 border-0 bg-transparent">
             <div class="card-body px-0">
               <div class="icon">
-                  <img src="../assets/icons/tennis-01.svg" alt="Tennis" layout="fixed" width="80" height="80"></amp-img>
+                <amp-img src="../assets/icons/tennis-01.svg" alt="Tennis" layout="fixed" width="80" height="80"></amp-img>
               </div>
               <p class="card-title h5 mt-3 font-weight-bold">Tennis</p>
             </div>
@@ -605,7 +605,7 @@ header.masthead h1{font-size:2.4rem;}
           <div class="card h-100 border-0 bg-transparent">
             <div class="card-body px-0">
               <div class="icon">
-                  <img src="../assets/icons/badminton-01.svg" alt="Badminton" layout="fixed" width="80" height="80"></amp-img>
+                <amp-img src="../assets/icons/badminton-01.svg" alt="Badminton" layout="fixed" width="80" height="80"></amp-img>
               </div>
               <p class="card-title h5 mt-3 font-weight-bold">Badminton</p>
             </div>
@@ -615,7 +615,7 @@ header.masthead h1{font-size:2.4rem;}
           <div class="card h-100 border-0 bg-transparent">
             <div class="card-body px-0">
               <div class="icon">
-                  <img src="../assets/icons/swimming-01.svg" alt="Swimming" layout="fixed" width="80" height="80"></amp-img>
+                <amp-img src="../assets/icons/swimming-01.svg" alt="Swimming" layout="fixed" width="80" height="80"></amp-img>
               </div>
               <p class="card-title h5 mt-3 font-weight-bold">Swimming</p>
             </div>
@@ -625,7 +625,7 @@ header.masthead h1{font-size:2.4rem;}
           <div class="card h-100 border-0 bg-transparent">
             <div class="card-body px-0">
               <div class="icon">
-                  <img src="../assets/icons/athletics-01.svg" alt="Athletics" layout="fixed" width="80" height="80"></amp-img>
+                <amp-img src="../assets/icons/athletics-01.svg" alt="Athletics" layout="fixed" width="80" height="80"></amp-img>
               </div>
               <p class="card-title h5 mt-3 font-weight-bold">Athletics</p>
             </div>
@@ -635,7 +635,7 @@ header.masthead h1{font-size:2.4rem;}
           <div class="card h-100 border-0 bg-transparent">
             <div class="card-body px-0">
               <div class="icon">
-                  <img src="../assets/icons/gymnast-01.svg" alt="Gymnastics" layout="fixed" width="80" height="80"></amp-img>
+                <amp-img src="../assets/icons/gymnast-01.svg" alt="Gymnastics" layout="fixed" width="80" height="80"></amp-img>
               </div>
               <p class="card-title h5 mt-3 font-weight-bold">Gymnastics</p>
             </div>
@@ -655,7 +655,7 @@ header.masthead h1{font-size:2.4rem;}
           <div class="card h-100 border-0 bg-transparent">
             <div class="card-body px-0">
               <div class="icon">
-                  <img src="../assets/icons/music-01.svg" alt="Music" layout="fixed" width="80" height="80"></amp-img>
+                <amp-img src="../assets/icons/music-01.svg" alt="Music" layout="fixed" width="80" height="80"></amp-img>
               </div>
               <p class="card-title h5 mt-3 font-weight-bold">Music</p>
             </div>
@@ -665,7 +665,7 @@ header.masthead h1{font-size:2.4rem;}
           <div class="card h-100 border-0 bg-transparent">
             <div class="card-body px-0">
               <div class="icon">
-                  <img src="../assets/icons/art-01.svg" alt="Art & Craft" layout="fixed" width="80" height="80"></amp-img>
+                <amp-img src="../assets/icons/art-01.svg" alt="Art & Craft" layout="fixed" width="80" height="80"></amp-img>
               </div>
               <p class="card-title h5 mt-3 font-weight-bold">Art & Craft</p>
             </div>
@@ -675,7 +675,7 @@ header.masthead h1{font-size:2.4rem;}
           <div class="card h-100 border-0 bg-transparent">
             <div class="card-body px-0">
               <div class="icon">
-                  <img src="../assets/icons/pottery-01.svg" alt="Pottery & Sculpture" layout="fixed" width="80" height="80"></amp-img>
+                <amp-img src="../assets/icons/pottery-01.svg" alt="Pottery & Sculpture" layout="fixed" width="80" height="80"></amp-img>
               </div>
               <p class="card-title h5 mt-3 font-weight-bold">Pottery & Sculpture</p>
             </div>
@@ -685,7 +685,7 @@ header.masthead h1{font-size:2.4rem;}
           <div class="card h-100 border-0 bg-transparent">
             <div class="card-body px-0">
               <div class="icon">
-                  <img src="../assets/icons/drama-01.svg" alt="Dramatics" layout="fixed" width="80" height="80"></amp-img>
+                <amp-img src="../assets/icons/drama-01.svg" alt="Dramatics" layout="fixed" width="80" height="80"></amp-img>
               </div>
               <p class="card-title h5 mt-3 font-weight-bold">Dramatics</p>
             </div>
@@ -695,7 +695,7 @@ header.masthead h1{font-size:2.4rem;}
           <div class="card h-100 border-0 bg-transparent">
             <div class="card-body px-0">
               <div class="icon">
-                  <img src="../assets/icons/yoga-01.svg" alt="Yoga" layout="fixed" width="80" height="80"></amp-img>
+                <amp-img src="../assets/icons/yoga-01.svg" alt="Yoga" layout="fixed" width="80" height="80"></amp-img>
               </div>
               <p class="card-title h5 mt-3 font-weight-bold">Yoga</p>
             </div>
@@ -705,7 +705,7 @@ header.masthead h1{font-size:2.4rem;}
           <div class="card h-100 border-0 bg-transparent">
             <div class="card-body px-0">
               <div class="icon">
-                  <img src="../assets/icons/dance-01.svg" alt="Dance" layout="fixed" width="80" height="80"></amp-img>
+                <amp-img src="../assets/icons/dance-01.svg" alt="Dance" layout="fixed" width="80" height="80"></amp-img>
               </div>
               <p class="card-title h5 mt-3 font-weight-bold">Dance</p>
             </div>
@@ -723,7 +723,7 @@ header.masthead h1{font-size:2.4rem;}
        <div class="col-lg-8">
          <div class="card border-0 shadow mt-4">
            <div class="card-body">
-              <img src="../assets/swimming.jpg" alt="swimming" class="img-fluid w-100">
+            <amp-img src="../assets/swimming.jpg" alt="swimming" class="img-fluid w-100" layout="fixed" width="600" height="400"></amp-img>
            </div>
          </div>
        </div>
@@ -739,7 +739,11 @@ header.masthead h1{font-size:2.4rem;}
         <div class="col-lg-8">
           <div class="card border-0 shadow mt-4">
             <div class="card-body">
-              <iframe width="100%" height="350" src="https://www.youtube.com/embed/4N8fsrSkp8w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+              <amp-youtube width="480px"
+                height="300"
+                layout="responsive"
+                data-videoid="4N8fsrSkp8w">
+              </amp-youtube>
             </div>
           </div>
         </div>
