--- a/amp/facilities.html
+++ b/amp/facilities.html
@@ -723,7 +723,7 @@ header.masthead h1{font-size:2.4rem;}
        <div class="col-lg-8">
          <div class="card border-0 shadow mt-4">
            <div class="card-body">
-            <amp-img src="../assets/swimming.jpg" alt="swimming" class="img-fluid w-100" layout="fixed" width="600" height="400"></amp-img>
+            <amp-img src="../assets/swimming.jpg" alt="swimming" class="img-fluid w-100" layout="responsive" width="600" height="400"></amp-img>
            </div>
          </div>
        </div>
