--- a/careers.html
+++ b/careers.html
@@ -86,8 +86,10 @@
           <div class="container h-100">
                 <h2 class="card-text mt-0 h5 text-center mb-4 text-blue font-weight-bold">Seeking Educational Revolutionaries</h2>
                   <div class="row h-100 align-items-center justify-content-center">
+                    <div class="col-lg-12 align-self-start">
                     <p>Pragyanam is a new K-12 school in Gurugram, from the same group as Footprints Childcare; founded by IIT-IIM alumni. In the last six years, we have served over 12000 parents, across 80 centres in India. ‘Pragyanam’ which means wisdom or understanding in Sanskrit, has been founded on the core belief that the objective of learning in the 21st century is to raise mindful, conscientious individuals who root for competence over competitiveness and aspire to live a life of happiness and fulfilment. Pragyanam has developed a “No-Limit Curriculum” where subjects are used as a medium to develop life-skills. While the main focus is on developing these life-skills, learning will happen along the way.</p>
                   </div>
+                </div>
               </div>
       </section>
 
