--- a/amp/careers.html
+++ b/amp/careers.html
@@ -74,7 +74,7 @@
 *,::after,::before{box-sizing:border-box;}
 footer,header,nav,section{display:block;}
 body{margin:0;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";font-size:1rem;font-weight:400;line-height:1.5;color:#212529;text-align:left;background-color:#fff;}
-[tabindex="-1"]:focus:not(:focus-visible){outline:0!important;}
+[tabindex="-1"]:focus:not(:focus-visible){outline:0;}
 h1,h2,h4,h5{margin-top:0;margin-bottom:.5rem;}
 p{margin-top:0;margin-bottom:1rem;}
 ul{margin-top:0;margin-bottom:1rem;}
@@ -199,7 +199,7 @@ h1{font-size:2.5rem;}
 .navbar-expand-lg .navbar-nav .dropdown-menu{position:absolute;}
 .navbar-expand-lg .navbar-nav .nav-link{padding-right:.5rem;padding-left:.5rem;}
 .navbar-expand-lg>.container{-ms-flex-wrap:nowrap;flex-wrap:nowrap;}
-.navbar-expand-lg .navbar-collapse{display:-ms-flexbox!important;display:flex!important;-ms-flex-preferred-size:auto;flex-basis:auto;}
+.navbar-expand-lg .navbar-collapse{display:-ms-flexbox;display:flex;-ms-flex-preferred-size:auto;flex-basis:auto;}
 .navbar-expand-lg .navbar-toggler{display:none;}
 }
 .navbar-light .navbar-brand{color:rgba(0,0,0,.9);}
@@ -248,55 +248,55 @@ button.close{padding:0;background-color:transparent;border:0;}
 .modal-dialog-centered{min-height:calc(100% - 3.5rem);}
 .modal-dialog-centered::before{height:calc(100vh - 3.5rem);height:-webkit-min-content;height:-moz-min-content;height:min-content;}
 }
-.bg-light{background-color:#f8f9fa!important;}
-.bg-dark{background-color:#343a40!important;}
-.bg-white{background-color:#fff!important;}
-.bg-transparent{background-color:transparent!important;}
-.border-bottom-0{border-bottom:0!important;}
-.d-block{display:block!important;}
-.d-flex{display:-ms-flexbox!important;display:flex!important;}
+.bg-light{background-color:#f8f9fa;}
+.bg-dark{background-color:#343a40;}
+.bg-white{background-color:#fff;}
+.bg-transparent{background-color:transparent;}
+.border-bottom-0{border-bottom:0;}
+.d-block{display:block;}
+.d-flex{display:-ms-flexbox;display:flex;}
 @media (min-width:576px){
-.d-sm-none{display:none!important;}
+.d-sm-none{display:none;}
 }
-.justify-content-center{-ms-flex-pack:center!important;justify-content:center!important;}
-.align-items-center{-ms-flex-align:center!important;align-items:center!important;}
-.align-self-start{-ms-flex-item-align:start!important;align-self:flex-start!important;}
-.align-self-center{-ms-flex-item-align:center!important;align-self:center!important;}
+.justify-content-center{-ms-flex-pack:center;justify-content:center;}
+.align-items-center{-ms-flex-align:center;align-items:center;}
+.align-self-start{-ms-flex-item-align:start;align-self:flex-start;}
+.align-self-center{-ms-flex-item-align:center;align-self:center;}
 .fixed-top{position:fixed;top:0;right:0;left:0;z-index:1030;}
 .fixed-bottom{position:fixed;right:0;bottom:0;left:0;z-index:1030;}
 .sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);white-space:nowrap;border:0;}
-.shadow{box-shadow:0 .5rem 1rem rgba(0,0,0,.15)!important;}
-.h-100{height:100%!important;}
-.m-0{margin:0!important;}
-.mt-0{margin-top:0!important;}
-.mr-2{margin-right:.5rem!important;}
-.mb-3{margin-bottom:1rem!important;}
-.mt-4,.my-4{margin-top:1.5rem!important;}
-.mb-4,.my-4{margin-bottom:1.5rem!important;}
-.pl-0{padding-left:0!important;}
-.py-3{padding-top:1rem!important;}
-.pb-3,.py-3{padding-bottom:1rem!important;}
-.pt-4,.py-4{padding-top:1.5rem!important;}
-.py-4{padding-bottom:1.5rem!important;}
-.py-5{padding-top:3rem!important;}
-.py-5{padding-bottom:3rem!important;}
-.ml-auto{margin-left:auto!important;}
+.shadow{box-shadow:0 .5rem 1rem rgba(0,0,0,.15);}
+.h-100{height:100%;}
+.m-0{margin:0;}
+.mt-0{margin-top:0;}
+.mr-2{margin-right:.5rem;}
+.mb-3{margin-bottom:1rem;}
+.mt-4,.my-4{margin-top:1.5rem;}
+.mb-4,.my-4{margin-bottom:1.5rem;}
+.pl-0{padding-left:0;}
+.py-3{padding-top:1rem;}
+.pb-3,.py-3{padding-bottom:1rem;}
+.pt-4,.py-4{padding-top:1.5rem;}
+.py-4{padding-bottom:1.5rem;}
+.py-5{padding-top:3rem;}
+.py-5{padding-bottom:3rem;}
+.ml-auto{margin-left:auto;}
 @media (min-width:992px){
-.pb-lg-0{padding-bottom:0!important;}
-.pb-lg-2{padding-bottom:.5rem!important;}
+.pb-lg-0{padding-bottom:0;}
+.pb-lg-2{padding-bottom:.5rem;}
 }
-.text-center{text-align:center!important;}
-.font-weight-bold{font-weight:700!important;}
-.text-white{color:#fff!important;}
-.text-muted{color:#6c757d!important;}
+.text-center{text-align:center;}
+.font-weight-bold{font-weight:700;}
+.text-white{color:#fff;}
+.text-muted{color:#6c757d;}
 @media print{
-*,::after,::before{text-shadow:none!important;box-shadow:none!important;}
+*,::after,::before{text-shadow:none;box-shadow:none;}
 a:not(.btn){text-decoration:underline;}
 img{page-break-inside:avoid;}
 h2,p{orphans:3;widows:3;}
 h2{page-break-after:avoid;}
-body{min-width:992px!important;}
-.container{min-width:992px!important;}
+body{min-width:992px;}
+.container{min-width:992px;}
 .navbar{display:none;}
 }
 /*! Custom CSS */
