--- a/amp/careers.html
+++ b/amp/careers.html
@@ -636,13 +636,13 @@ header.masthead h1{font-size:2.4rem;}
 <!-- Submit CV -->
   <section class="py-5 submit-cv">
     <div class="container text-center">
-    <h4 class="font-weight-bold">Email us at - <a href="emailto:openings@pragyanam.school" class="text-blue">openings@pragyanam.school</a></h4>
+    <h4 class="font-weight-bold">Email us at - <a href="mailto:openings@pragyanam.school" class="text-blue">openings@pragyanam.school</a></h4>
     <p class="h4 font-weight-bold">Or</p>
     <h5 class="h4 font-weight-bold">You Can Upload Your Resume Here</h5>
     <div class="row text-center align-self-start justify-content-center">
     <div class="col-lg-7">
       <div class="mt-4">
-        <form action="" class="upload-cv">
+        <form method="GET" action="/documentation/examples/api/submit-form-xhr" target="_top" class="upload-cv">
           <div class="custom-file">
             <input type="file" class="custom-file-input form-control-lg" id="customFile">
             <label class="custom-file-label" for="customFile">Choose file</label>
