--- a/careers.html
+++ b/careers.html
@@ -116,7 +116,7 @@
 <!-- Submit CV -->
 <section class="py-5 submit-cv">
   <div class="container text-center">
-      <h4 class="font-weight-bold">Email us at - <a href="emailto:openings@pragyanam.school" class="text-blue">openings@pragyanam.school</a></h4>
+      <h4 class="font-weight-bold">Email us at - <a href="mailto:openings@pragyanam.school" class="text-blue">openings@pragyanam.school</a></h4>
       <p class="h4 font-weight-bold">Or</p>
       <h5 class="h4 font-weight-bold">You Can Upload Your Resume Here</h5>
       <div class="row text-center align-self-start justify-content-center">
