--- a/amp/careers.html
+++ b/amp/careers.html
@@ -439,6 +439,26 @@ amp-accordion.hidden-header section[expanded] h4 {
     right: 20px;
     top: 15px;
 }
+#header-sidebar nav ul .ampstart-dropdown-items {
+    margin-top: 5px;
+}
+#header-sidebar nav ul li.ampstart-dropdown-item {
+    padding: 10px 24px 10px 20px;
+}
+.ampstart-dropdown>section>header:after {
+    display: inline-block;
+    content: "+";
+    padding: 0 0 0 1.5rem;
+    color: #003f93;
+}
+.ampstart-dropdown>[expanded]>header:after {
+    content: "–";
+}
+.i-amphtml-accordion-header {
+    background-color: #ffffff;
+    border: 1px solid #ffffff;
+    outline: none;
+}
     
 .scrollToTop { color: #fff; font-size: 1.8em; box-shadow: 0 1px 1px 0 rgba(0,0,0,.14), 0 1px 1px -1px rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12); width: 50px; height: 50px; border-radius: 15%; border: none; outline: none; background: #fca509; z-index: 999; bottom: 10px; right: 25px; position: fixed; opacity: 0; visibility: hidden; }
 
@@ -539,7 +559,7 @@ header.masthead h1{font-size:2.4rem;}
                 <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Curriculum</a>
                 <div class="dropdown-menu" aria-labelledby="dropdown03">
                   <a class="dropdown-item" href="./curriculum.html">Our Curriculum</a>
-                  <a class="dropdown-item" href="./affiliation.html">CBSE</a>
+                  <a class="dropdown-item" href="./affiliation.html">Affiliation</a>
                   <a class="dropdown-item" href="./assessment.html">Assessment</a>
                 </div>
               </li>
@@ -571,12 +591,32 @@ header.masthead h1{font-size:2.4rem;}
           <ul class="list-reset m0 p0 ampstart-label">
                 <li class="ampstart-nav-item"><a class="ampstart-nav-link" href="./index.html">Home</a></li>
                 <li class="ampstart-nav-item"><a class="ampstart-nav-link" href="./about.html">About Us</a></li>
-                <li class="ampstart-nav-item"><a class="ampstart-nav-link" href="./curriculum.html">Our Curriculum</a></li>
-                <li class="ampstart-nav-item"><a class="ampstart-nav-link" href="./affiliation.html">CBSE</a></li>
-                <li class="ampstart-nav-item"><a class="ampstart-nav-link" href="./assessment.html">Assessment</a></li>
-                <li class="ampstart-nav-item"><a class="ampstart-nav-link" href="./facilities.html">Facilities</a></li>
-                <li class="ampstart-nav-item"><a class="ampstart-nav-link" href="./nutrition.html">Nutrition</a></li>
-                <li class="ampstart-nav-item"><a class="ampstart-nav-link" href="./infirmary.html">Infirmary</a></li>
+                <li class="ampstart-nav-item">
+                  <!-- Start Dropdown-inline -->
+                  <amp-accordion layout="container" disable-session-states="" class="ampstart-dropdown">
+                    <section>
+                      <header>Our Curriculum</header>
+                      <ul class="ampstart-dropdown-items list-reset m0 p0">
+                          <li class="ampstart-dropdown-item"><a href="./curriculum.html" class="text-decoration-none">Curriculum</a></li>
+                          <li class="ampstart-dropdown-item"><a href="./affiliation.html" class="text-decoration-none">Affiliation</a></li>
+                          <li class="ampstart-dropdown-item"><a href="./assessment.html" class="text-decoration-none">Assessment</a></li>
+                      </ul>
+                    </section>
+                  </amp-accordion>
+                </li>
+                <li class="ampstart-nav-item">
+                  <!-- Start Dropdown-inline -->
+                  <amp-accordion layout="container" disable-session-states="" class="ampstart-dropdown">
+                    <section>
+                      <header>Facilities</header>
+                      <ul class="ampstart-dropdown-items list-reset m0 p0">
+                          <li class="ampstart-dropdown-item"><a href="./facilities.html" class="text-decoration-none">Facilities</a></li>
+                          <li class="ampstart-dropdown-item"><a href="./nutrition.html" class="text-decoration-none">Nutrition</a></li>
+                          <li class="ampstart-dropdown-item"><a href="./infirmary.html" class="text-decoration-none">Infirmary</a></li>
+                      </ul>
+                    </section>
+                  </amp-accordion>
+                </li>
                 <li class="ampstart-nav-item"><a class="ampstart-nav-link" href="./admission.html">Admission</a></li>
                 <li class="ampstart-nav-item"><a class="ampstart-nav-link" href="./careers.html">Careers</a></li>
           </ul>
