--- a/amp/careers.html
+++ b/amp/careers.html
@@ -439,12 +439,12 @@ amp-accordion.hidden-header section[expanded] h4 {
     right: 20px;
     top: 15px;
 }
-#header-sidebar nav ul .ampstart-dropdown-items {
+/* #header-sidebar nav ul .ampstart-dropdown-items {
     margin-top: 5px;
 }
 #header-sidebar nav ul li.ampstart-dropdown-item {
     padding: 10px 24px 10px 20px;
-}
+} */
 .ampstart-dropdown>section>header:after {
     display: inline-block;
     content: "+";
@@ -682,7 +682,7 @@ header.masthead h1{font-size:2.4rem;}
     <div class="row text-center align-self-start justify-content-center">
     <div class="col-lg-7">
       <div class="mt-4">
-        <form method="GET" action="/documentation/examples/api/submit-form-xhr" target="_top" class="upload-cv">
+        <form action="/documentation/examples/api/submit-form-xhr" target="_top" class="upload-cv">
           <div class="custom-file">
             <input type="file" class="custom-file-input form-control-lg" id="customFile">
             <label class="custom-file-label" for="customFile">Choose file</label>
@@ -720,7 +720,7 @@ header.masthead h1{font-size:2.4rem;}
          <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>-->
       </div>
        <div class="modal-body">
-          <form method="GET" action="/documentation/examples/api/submit-form-xhr" target="_top">
+          <form action="/documentation/examples/api/submit-form-xhr" target="_top">
               <div class="form-row">
                 <div class="col-md-12 mb-3">
                   <label for="validationCustom01" class="sr-only">Your Name</label>
