--- a/amp/careers.html
+++ b/amp/careers.html
@@ -439,27 +439,7 @@ amp-accordion.hidden-header section[expanded] h4 {
     right: 20px;
     top: 15px;
 }
-/* #header-sidebar nav ul .ampstart-dropdown-items {
-    margin-top: 5px;
-}
-#header-sidebar nav ul li.ampstart-dropdown-item {
-    padding: 10px 24px 10px 20px;
-} */
-/* .ampstart-dropdown>section>header:after {
-    display: inline-block;
-    content: "+";
-    padding: 0 0 0 1.5rem;
-    color: #003f93;
-}
-.ampstart-dropdown>[expanded]>header:after {
-    content: "–";
-}
-.i-amphtml-accordion-header {
-    background-color: #ffffff;
-    border: 1px solid #ffffff;
-    outline: none;
-}
-     */
+
 .scrollToTop { color: #fff; font-size: 1.8em; box-shadow: 0 1px 1px 0 rgba(0,0,0,.14), 0 1px 1px -1px rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12); width: 50px; height: 50px; border-radius: 15%; border: none; outline: none; background: #fca509; z-index: 999; bottom: 10px; right: 25px; position: fixed; opacity: 0; visibility: hidden; }
 
 @media (max-width: 575.98px){
@@ -722,7 +702,7 @@ header.masthead h1{font-size:2.4rem;}
          <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>-->
       </div>
        <div class="modal-body">
-          <form method="post" action="/documentation/examples/api/submit-form-xhr" target="_top">
+          <form method="post" action-xhr="/documentation/examples/api/submit-form-xhr" target="_top">
               <div class="form-row">
                 <div class="col-md-12 mb-3">
                   <label for="validationCustom01" class="sr-only">Your Name</label>
