Geeta Mam - Video Added

--- a/amp/about.html
+++ b/amp/about.html
@@ -667,7 +667,11 @@ header.masthead h1{font-size:2.4rem;}
                           <div class="col-lg-5 align-self-center">
                             <div class="card border-0 shadow head-video rounded-cm mb-4">
                                 <div class="card-body">
-                                  <amp-img src="../assets/school-head.jpg" alt="school-head" class="img-fluid w-100" layout="responsive" width="405px" height="207"></amp-img>
+                                  <amp-youtube width="480px"
+                                      height="300"
+                                      layout="responsive"
+                                      data-videoid="7TFyRj3TU2I">
+                                    </amp-youtube>
                                     <p class="text-center font-weight-bold my-2 h4 text-blue">Ms. GEETA VERMA</p>
                                 </div>
                             </div>
