Curriculum - Image replaced

--- a/amp/curriculum.html
+++ b/amp/curriculum.html
@@ -760,7 +760,7 @@ header.masthead h1{font-size:2.4rem;}
                     <div class="col-lg-5 align-self-center">
                       <div class="card border-0 shadow head-video rounded-cm mb-4">
                           <div class="card-body">
-                              <amp-img src="../assets/school-head.jpg" alt="No-Limit Curriculum" class="img-fluid w-100" width="405" height="270" layout="responsive"></amp-img>
+                              <amp-img src="../assets/no-limit.jpg" alt="No-Limit Curriculum" class="img-fluid w-100" width="405" height="270" layout="responsive"></amp-img>
                           </div>
                       </div>
                     </div>
@@ -791,7 +791,7 @@ header.masthead h1{font-size:2.4rem;}
                      <div class="col-lg-5 align-self-center order-1 order-lg-2">
                        <div class="card border-0 shadow head-video rounded-cm mb-4">
                            <div class="card-body">
-                            <amp-img src="../assets/school-head.jpg" alt="traditional methods" class="img-fluid w-100" width="405" height="270" layout="responsive"></amp-img>
+                            <amp-img src="../assets/traditional-methods.jpg" alt="traditional methods" class="img-fluid w-100" width="405" height="270" layout="responsive"></amp-img>
                            </div>
                        </div>
                      </div>
